plugins {
    id 'java'
    id 'jacoco'
    id 'org.springframework.boot' version '3.4.13'
    id 'io.spring.dependency-management' version '1.1.6'
}
ext {
    springCloudVersion = "2024.0.2"
    // Minimum line-coverage ratio enforced by jacocoTestCoverageVerification.
    // Set just under the current measured level so it locks in no-regression with a
    // small margin for run-to-run variance; raise it as tests are added. Denominator
    // excludes generated/DTO/config classes. History: 14% at introduction (14.5%
    // measured), raised to 18% after the RBAC, billing, procurement, receipt, ledger
    // and attendance service tests landed (18.77% measured), then to 22% after the
    // consumption, transfer, adjustment, bank-account and report-service tests (22.42%
    // measured), then to 25% after the leave-accrual, employee-hierarchy,
    // attendance-regularization and project-invite-code service tests (25.50% measured).
    jacocoLineFloor = 0.25
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'io.github.openhtmltopdf:openhtmltopdf-slf4j:1.1.75'
    implementation('io.github.openhtmltopdf:openhtmltopdf-pdfbox:1.1.75') {
        exclude group: 'commons-logging', module: 'commons-logging'
    }
    implementation 'org.mapstruct:mapstruct:1.6.3'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
    implementation 'com.github.librepdf:openpdf:3.0.0'
    implementation 'software.amazon.awssdk:s3:2.41.10'
    implementation 'org.liquibase:liquibase-core:5.0.1'
    implementation 'org.keycloak:keycloak-admin-client:26.0.7'
    implementation 'com.giffing.bucket4j.spring.boot.starter:bucket4j-spring-boot-starter:0.13.0'
    implementation 'javax.cache:cache-api:1.1.1'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.2.2'
    implementation 'com.github.ben-manes.caffeine:jcache:3.2.2'
    // Optional Redis backing for cross-replica shared state (Spring cache + Bucket4j rate
    // limiting). Only wired when echno.cache.provider=redis; the default (caffeine) path
    // never contacts Redis. The Lettuce-based Bucket4j proxy manager version is pinned to
    // match the bucket4j core the giffing starter pulls (8.14.0).
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'com.bucket4j:bucket4j_jdk17-lettuce:8.14.0'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    testImplementation 'org.springframework.security:spring-security-test'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'io.prometheus:prometheus-metrics-exposition-formats'
    implementation 'com.jayway.jsonpath:json-path'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'net.logstash.logback:logstash-logback-encoder:8.0'
    implementation 'com.github.loki4j:loki-logback-appender:1.5.1'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:cockroachdb'
    testImplementation 'com.github.dasniko:testcontainers-keycloak:3.7.0'
    testImplementation 'com.tngtech.archunit:archunit-junit5:1.3.0'
    runtimeOnly 'org.postgresql:postgresql'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}


group = 'org.tornotron'
version = '0.0.1-SNAPSHOT'
description = 'echno_backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}
dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.add('-parameters')
}

tasks.named('test') {
    useJUnitPlatform()
    // Testcontainers' bundled docker-java pings the daemon with API 1.32, which
    // modern Docker Engines reject (they require >= 1.40). docker-java reads the
    // pinned version from the 'api.version' system property (not DOCKER_API_VERSION,
    // which is a docker-CLI variable). 1.44 is accepted by both CI and the lab host.
    systemProperty 'api.version', '1.44'
    // Bound the forked test JVM so the whole run fits the 2 vCPU / 7 GB CI runner
    // alongside the shared CockroachDB container: an unbounded heap plus the
    // container's default cache (a quarter of host memory) can exhaust the runner
    // and the OOM killer then takes the database, failing the rest of the suite.
    maxHeapSize = '1024m'
    jvmArgs '-XX:MaxMetaspaceSize=512m'
    // Bound how many Spring test contexts the run keeps alive at once. There is no
    // forkEvery, so one JVM serves the whole suite and the default cache of 32 means
    // every distinct test configuration's context, each with its own Hibernate
    // SessionFactory, is held to the last test. That total only grows as the schema
    // does, and it is what leaves nothing for the ArchUnit import that runs late in
    // the run and needs the class graph of the whole application in memory at once.
    // Capping the cache makes Spring close the least recently used context instead of
    // holding all of them; a context is rebuilt if a later class needs it again,
    // which costs seconds where the alternative costs the build.
    systemProperty 'spring.test.context.cache.maxSize', '8'
    // Print each test as it starts and finishes so a CI log always shows which test
    // is running; without this, a hung test leaves no trace of which one stalled.
    testLogging {
        events 'started', 'passed', 'skipped', 'failed'
        exceptionFormat 'short'
    }
    finalizedBy jacocoTestReport
}

jacoco {
    toolVersion = '0.8.12'
}

// Coverage report over real business logic. Generated and non-logic classes are
// excluded from the denominator so the number tracks tested behaviour, not Lombok
// getters, MapStruct output, Spring config or the application entrypoint.
def jacocoLogicExclusions = [
        '**/EchnoBackendApplication.class',
        '**/config/**', '**/configuration/**',
        '**/dto/**', '**/dtos/**',
        '**/*MapperImpl.class',
]

tasks.named('jacocoTestReport') {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
    classDirectories.setFrom(files(sourceSets.main.output.classesDirs.collect {
        fileTree(dir: it, exclude: jacocoLogicExclusions)
    }))
}

// No-regression coverage gate. The floor ratchets upward as tests are added; it is
// deliberately set at (not above) the current level so the build stays green while
// coverage climbs, the same ratchet idea as the ArchUnit endpoint rule.
tasks.named('jacocoTestCoverageVerification') {
    dependsOn jacocoTestReport
    classDirectories.setFrom(files(sourceSets.main.output.classesDirs.collect {
        fileTree(dir: it, exclude: jacocoLogicExclusions)
    }))
    violationRules {
        rule {
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = jacocoLineFloor
            }
        }
    }
}
tasks.named('check') {
    dependsOn jacocoTestCoverageVerification
}
